--- a/src/Terrain/TexColumns/imgui.ini
+++ b/src/Terrain/TexColumns/imgui.ini
@@ -15,8 +15,9 @@ Pos=58,31
 Size=289,97
 
 [Window][Settings]
-Pos=578,123
-Size=467,420
+Pos=5,5
+Size=500,800
+Collapsed=1
 
 [Window][ObjectSettings]
 Pos=315,13
