--- a/src/Terrain/TexColumns/TexColumns.vcxproj
+++ b/src/Terrain/TexColumns/TexColumns.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="..\..\Common\imgui_widgets.cpp" />
     <ClCompile Include="..\..\Common\MathHelper.cpp" />
     <ClCompile Include="FrameResource.cpp" />
+    <ClCompile Include="TAATexture.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="TexColumnsApp.cpp" />
   </ItemGroup>
@@ -195,6 +196,7 @@
     <ClInclude Include="..\..\Common\UploadBuffer.h" />
     <ClInclude Include="FrameResource.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="TAATexture.h" />
     <ClInclude Include="Terrain.h" />
   </ItemGroup>
   <ItemGroup>
