--- a/src/Terrain/TexColumns/TexColumns.vcxproj.filters
+++ b/src/Terrain/TexColumns/TexColumns.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Terrain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TAATexture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Common\d3dApp.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Terrain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TAATexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
