--- a/src/Terrain/TexColumns/imgui.ini
+++ b/src/Terrain/TexColumns/imgui.ini
@@ -16,9 +16,21 @@ Size=289,97
 
 [Window][Settings]
 Pos=5,5
-Size=300,500
+Size=300,300
 
 [Window][ObjectSettings]
 Pos=315,13
 Size=206,60
+
+[Window][Main Settings]
+Pos=5,5
+Size=300,500
+
+[Window][TAA Settings]
+Pos=350,5
+Size=250,200
+
+[Window][Terrain and Tesselation]
+Pos=5,260
+Size=300,200
 
