--- a/src/Terrain/TexColumns/imgui.ini
+++ b/src/Terrain/TexColumns/imgui.ini
@@ -29,10 +29,12 @@ Size=300,500
 [Window][TAA Settings]
 Pos=350,5
 Size=250,200
+Collapsed=1
 
 [Window][Terrain and Tesselation]
 Pos=5,260
 Size=300,200
+Collapsed=1
 
 [Window][Atmosphere]
 Pos=900,5
