--- a/src/Terrain/TexColumns/TexColumns.vcxproj.filters
+++ b/src/Terrain/TexColumns/TexColumns.vcxproj.filters
@@ -134,10 +134,16 @@
     <ClInclude Include="TAATexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MarchingCubes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="TexColumns.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
