--- a/src/Terrain/TexColumns/imgui.ini
+++ b/src/Terrain/TexColumns/imgui.ini
@@ -29,6 +29,7 @@ Size=300,500
 [Window][TAA Settings]
 Pos=350,5
 Size=250,200
+Collapsed=1
 
 [Window][Terrain and Tesselation]
 Pos=5,260
@@ -44,6 +45,6 @@ Pos=900,350
 Size=300,350
 
 [Window][Marching Generation]
-Pos=900,350
-Size=300,350
+Pos=550,5
+Size=310,506
 
