--- a/src/Terrain/TexColumns/imgui.ini
+++ b/src/Terrain/TexColumns/imgui.ini
@@ -39,12 +39,13 @@ Collapsed=1
 [Window][Atmosphere]
 Pos=900,5
 Size=300,350
+Collapsed=1
 
 [Window][Terrain Generation]
 Pos=900,350
 Size=300,350
 
 [Window][Marching Generation]
-Pos=550,5
+Pos=935,45
 Size=310,506
 
